css/main.scss
/* custom font goes first*/
@import url();


html{
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
  font-family: 'Times New Roman', Times, serif;
  margin: 0px;
  background-color: #09113c;
  background-image: url("../img/CRH.jpg");
  background-blend-mode: screen;
  background-size: cover;
  min-height: 100vh;
}

h1, h2, h3, p {
  color: rgb(7, 5, 111);
  position: center;
}

a {
  color: inherit;
  text-decoration: none;
}

a:hover {
  background-color: rgb(116, 116, 246);
  color: rgb(189, 189, 225);
}

h1, h2, h3, p {
  color: rgb(7, 5, 111);
 text-align: center;
}

section {
  padding-top: 40px;
}

  .content {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    padding: 0px;
  }
.info{
  color: rgb(7, 5, 111);
  padding: 0px;
  display: flex;
  flex-direction: column;
  align-items: left;
  justify-content: center;
  display: justify-content;
}

.info-aboutme{
  flex-direction: column;
  flex-wrap: nowrap;
  row-gap: 0.05%;
  width: 50%;
  height: 50%;
}

.info-aboutme h4{
  color: rgb(18, 12, 137);
  justify-content: right;
  align-items: right;
  text-align: center;
  position: right;
  display: fle;
  flex-direction: column;
}
ul.socials {
  display: flex;
  flex-direction: column;
}

ul.socials {
  display: flex;
  flex-direction: row;
  min-height: 10vh;
  justify-content: justify-content;
  gap: 10px;
  padding: 0px;
  width: 5px;
  height: 5px;
  image-orientation: from-image;
  list-style-type: none;
}
ul.socials img{
  width: 50;
  height: 50px;
  position: sticky;
  display: flex;
  flex-direction: row;
  align-items: left;
  justify-content: start;
  padding: 0px;
 list-style-type: none;
}



.header {
  padding: 0px;
  color: rgb(255, 255, 255);
  display: justify-content;
  flex-direction: center;
  background-color: #6072ff;
  color: rgba(9, 24, 133, 0.6);
}


section {

.footer{
   padding: 0px;
  color: rgb(255, 255, 255);
  display: justify-content;
  flex-direction: center;
  background-color: #6072ff;
  color: rgba(9, 24, 133, 0.6);
  flex-wrap: wrap;
}
 
 
  .content {
    flex: 1; /* Pushes the footer down if there is little text */
    padding: 0px;
}
ul.navigation-footer {
  background-color: #6072ff;;
  display: flex;
  flex-direction: row;
  justify-content: center;
  list-style: none;
  margin: 0;
 
  width: 100%;
  position: sticky;
    bottom: 0;
    left: 0;
    width: 100%;
    padding-top: 0px;
    padding-bottom: 100px;
    z-index: 100;

  li{

    a{
      background-color: #6072ff;
      color: rgb(255, 255, 255);
      display: block;
      padding: 10px;
      text-align:center;
      
      &:hover,
      &:focus {
        background-color: rgb(15, 30, 128);
        color: white;
      }
    }
  }
}
}

.Hyperlink-github{
  text-align: center;
  color:rgb(94, 111, 227);
  text-decoration: underline;
  text-wrap: wrap;
  justify-content:center;
  font-size: 24px;
}


.item-sub {
  color: rgb(255, 255, 255);
  margin: 0px;
  display: row;
  align-items: left;
  align-content: left;
}


.header-p {
  background-color: rgb(237, 20, 118);
  color:rgb(237, 20, 118);
}
.hyperlinks{
  text-align: center;
  color:rgb(6, 18, 99);
  text-decoration: underline;
  text-wrap: wrap;
  justify-content:center;
  font-size: 24px;
  display:justify-content;
}

.navigation-footer{
  background-color: #6072ff;;
  display: flex;
  flex-direction: row;
  justify-content: center;
  list-style: none;
  margin: 0;
 
  width: 100%;
  position: sticky;
    bottom: 0;
    left: 0;
    width: 100%;
    padding-top: 0px;
    padding-bottom: 100px;
    z-index: 100;

  li{

    a{
      background-color: #6072ff;
      color: rgb(255, 255, 255);
      display: block;
      padding: 10px;
      text-align:center;
      
      &:hover,
      &:focus {
        background-color: rgb(15, 30, 128);
        color: white;
      }
    }
  }
}

ul.hyperlinks{
  list-style:none;
  gap: 50px;
  //margin:20px;
 
  li{

    a{
      background-color: #6072ff;
      color: rgb(255, 255, 255);
      padding: 5px;
      border-radius:10px;
      border: 60px;
      text-align:center;
      line-height: 70px;
      
      &:hover,
      &:focus {
        background-color: rgb(15, 30, 128);
        color: white;
      }
    }
  }
}


.buttons{
  justify-content: left;
  margin: 20px;
  margin-left: 14px;
  margin-right: 3px;
  background-color: hsl(0, 0%, 100%);
  text-emphasis-color: #5c163f;
  width: 20%;
  padding: 15px;
  border-radius: 50px;
  text-align: center;
  position: sticky bottom;
  font-size: 20px;

  a {
    background-color: #bb2f81;
    color: rgb(255, 206, 225);
    display: block;
    padding: 5px;
    text-align:center;
    position: sticky;
    align-items: bottom;
    
    &:hover,
    &:focus {
      background-color: rgb(255, 143, 218);
      color: white;
    }
  }
}

/* reset and base style*/
.image-container {
    display: block;
    position:relative;
    // width: 400px;
    // height: 300px;
    overflow: hidden;
    border-radius: 10px;
    border:2px solid #8faefb;
    box-shadow: 10 10px 10px rgba(9, 24, 133, 0.6);
    text-align: center;
}

.image-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: all 0.5s ease;
}

.image-overlay{
    position: absolute;
    top: 0;
    left:0;
    width: 100%;
    height: 100%;
    background: linear-gradient(45deg, rgba(255, 255, 255, 0.5), rgba(0, 191, 255, 0.5));
    display: flex;
    justify-content: center;
    align-items: center;
    opacity: 0;
    transition: all 0.5s ease;
    color: white;
}

.image-overlay h2 {
    font-size: 24px;
    margin-bottom: 10px;
    transform: translateY(-20px);
    transition: all 0.3s ease;
}

.image-overlay p {
    transform: translateY(20px);
    font-size: 16px;
    transition: all 0.3s ease;
    padding: 0 20px;
}

/* hover effect */
.image-container:hover img{
    transform: scale(1.1);
    filter: brightness(0.7);
}

.image-container:hover .image-overlay{
    opacity: 1;
    transform: translateY(0);
}

.image-container:hover .image-overlay h2{
    transform: translateY(0); 
    transition-delay:0.2s;
}
.image-container:hover .image-overlay p{
    transform: translateY(0);
    transition-delay:0.3s;
}

/* shine effect */
.image-container::after {
    content: '';
    position: absolute;
    top: 0;
    left: -100%;
    width: 50%;
    height: 100%;
    background: linear-gradient(120deg, rgba(179, 194, 255, 0.5) 0%, rgba(0, 191, 255, 0.5)100%);
    transform: skewX(-25deg);
    transition: all 0.6s ease;
}

.image-container:hover::after {
    left: 150%;
}

.homepage {
  background-color: rgb(255, 0, 0);
  color: rgb(255, 255, 255);
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin: 20px;
}

ul.navigation {
  background-color: #6072ff;;
  display: flex;
  flex-direction: row;
  justify-content: center;
  list-style: none;
  margin: 0;
  padding: 0;
  width: 100%;

  li{

    a{
      background-color: #6072ff;
      color: rgb(255, 255, 255);
      display: block;
      padding: 10px;
      text-align:center;
      
      &:hover,
      &:focus {
        background-color: rgb(15, 30, 128);
        color: white;
      }
    }
  }
}

ul.buttons {
  display: flex;
  flex-direction: row;
  justify-content: center;
  list-style: none;
  margin: 0px;
  padding: 0;
  color: white;

  li {

    a {
      background-color: rgb(128, 236, 255);
      color: rgba(9, 24, 133, 0.6);
      display: block;
      padding: 10px;
      text-align:center;
      
      &:hover,
      &:focus {
        background-color: rgb(183, 45, 109);
        color: white;
      }
    }
  }
}

/* Featured Section on Homepage Styles */
.featured {

  .content {
    gap: 40px;
    max-width: 1440px;
    width: 90%;
    margin: 0 auto;
  }

  .category {
    display: flex;
    flex-wrap: wrap;
    column-gap: 200px;
    row-gap: 40px;

    &:nth-child(2n) {
      flex-direction: row-reverse;
    }
  }

  .image-container {
    flex-basis: 55%;
    min-width: 400px;
    flex-grow: 1;
  }

  .info {
    flex-basis: auto;
    flex-grow: 1;
  }

  a {
    display: block;
  }

  img {
    display: block;
    width: 100%;
  }

  &.col-3 {
    display: grid;
    grid-template-columns: 1fr;
   

    @media (width >= 670px) {
      grid-template-columns: 1fr 1fr 1fr;
    }
    
    .category {
      flex-direction: column;
      flex-wrap: nowrap;
       row-gap: 0.05%;
    }

    .image-container {
      flex-basis: auto;
      flex-grow: 0;
      min-width: 250px;
    }
  }

  &.portrait-images {

    img {
      aspect-ratio: 3/4;
    }
  }

  &.landscape-images {
    
    img {
      aspect-ratio: 16/9;
    }
  }

    &.square-images {
    
    img {
      aspect-ratio: 1/1;
    }
  }
}

/* Styles for screens above or equal to 600px wide */
@media (width >= 600px) {

  .item {
    background: #e52f96;
    color: rgb(193, 24, 114);
    padding: 10px;
    flex-basis: 92%;
    max-width: 440px;
    margin: 5px;
  }

  h1, h2, h3 {
    color: var(--white);
  }  
  
  html{
    box-sizing: border-box;
  }
  
  *, *:before , *:after {
    box-sizing: inherit;
  }

  section { 
    display: flex;
    flex-wrap: wrap;
    padding-top: 300px 0;
    gap: 5px;
    justify-content: center;
  }
  .video-container {
  display: block;
  position:relative;
  width: 390px;
  height: 400px;
  overflow: hidden;
  border-radius: 10px;
  border:2px solid #8faefb;
  box-shadow: 10 10px 10px rgba(90, 104, 214, 0.6);
}
.video-container video {
    width: 390px;
    height: 400px;
    object-fit: cover;
    transition: all 0.5s ease;
}

  

@media (width > 670px) {

  h1 {
    font-size: clamp(36px, 5vw, 60px);
    color: rgb(13, 36, 128);
  }

 h2 {
    color: rgb(0, 0, 0);
  }

  h3 {
    color: rgb(153, 153, 208);
  }
  h4 {
    color: rgb(114, 140, 236);
    justify-content: center;
    align-items: center;
    text-align: center;
  }
  
  
  .info h4{
    color: rgb(255, 255, 255);
    justify-content: right;
    align-items: center;
    text-align: center;
  }

  .info p {
    color: rgb(179, 177, 199);
  }
  
  section {
    column-gap: 2%;
    padding-top: 300px 0;
    padding-bottom: 0px;
  }
  .video-container {
  display: block;
  position:relative;
  width: 400px;
  height: 390px;
  overflow: hidden;
  border-radius: 10px;
  border:2px solid #8faefb;
  box-shadow: 10 10px 10px rgba(9, 24, 133, 0.6);
}
.video-container video {
    width: 400px;
    height: 390px;
    object-fit: cover;
    transition: all 0.5s ease;
}
}
}
  

@media (width >= 1000px) {

  .item {
    padding: 30px;
    font-size: 18px;
    
  }
  .video-container {
  display: block;
  position:relative;
  width: 400px;
  height: 290px;
  overflow: hidden;
  border-radius: 10px;
  border:2px solid #8faefb;
  box-shadow: 10 10px 10px rgba(9, 24, 133, 0.6);
}
.video-container video {
    width: 400px;
    height: 290px;
    object-fit: cover;
    transition: all 0.5s ease;
}
}

